<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:weightSum="1">

             <TextView
                android:id="@+id/todo_edit_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/novo_todo_titulo"
                android:layout_marginBottom="10dp"
                android:textSize="18sp"/>

            <br.ufms.facom.widget.MultiSelectSpinner
                android:id="@+id/todo_edit_tag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/novo_todo_tags"
                android:textSize="15sp"/>


            <Spinner
                android:id="@+id/todo_edit_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/novo_todo_status"
                android:textSize="15sp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop ="20dp"
                >

                <Button
                    android:id="@+id/todo_edit_btngrn_gravar"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/novo_todo_gravar"
                    android:textSize="15sp"
                    />

                <Button
                    android:id="@+id/todo_edit_btngrn_cancelar"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/todo_edit_btngrn_gravar"
                    android:text="@string/novo_todo_cancelar"
                    android:textSize="15sp"
                    />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>